--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nextui-org/react": "^2.4.8",
     "framer-motion": "^11.5.6",
     "i": "^0.3.7",
+    "iconsax-react": "^0.0.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2"
