--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nextui-org/react": "^2.4.8",
     "@reduxjs/toolkit": "^2.3.0",
+    "aos": "^2.3.4",
     "framer-motion": "^11.5.6",
     "i": "^0.3.7",
     "iconsax-react": "^0.0.8",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@types/aos": "^3.0.7",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
